# pyrogram_bot_test

./: .dockerignore  .envTEMPLATE  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
bot/: .envTEMPLATE  constructor.py  main.py  settings.py
bot/db/: __init__.py  base.py  create_db.py
bot/db/models/: __init__.py  session.py  user.py
bot/handlers/: __init__.py  new_user_handler.py  user_in_funnel.py
bot/helpers/: __init__.py  api_session.py  change_user_status.py  check_user_still_alive.py
